# PyALBSim

./: .gitignore  CITATION.cff  LICENSE  backward.prof  camera.py  compare_reflection_function.py  create_photon_desity_heatmap.py  forward.prof  hypercube_sampling.py  hypercube_xlim_regression.py  laser.py  load_simulation_file.py  load_simulation_file_backwards.py  photon.py  profile_output.lprof  profile_output_2025-06-17T163408.txt  profile_output_2025-06-17T200535.txt  profile_output_2025-06-17T221056.txt  profile_output_2025-06-17T231011.txt  profile_output_2025-06-18T103244.txt  profile_output_2025-06-18T123818.txt  pyproject.toml  readme.md  requirements.txt  simulation.py  simulation_multiprocess.py  simulation_multiprocess_v2.py  test_kdtree_query_speed.py  test_linear_execution.py  test_ocean_optics_ffpf.py  test_performance.py  test_scatter_energies.py  visualize_scatter_distances.py  world.py
deprecated/: load_simulation_file_backwards.py  only_forwards.py  test_linear_execution.py  test_ocean_optics_ffpf.py  visualize_scatter_distances.py
notebooks/: run_benchmark_report.ipynb  run_heatmaps_analysis.ipynb  run_hypercube_sampling.ipynb  run_parallel.ipynb
scripts/: run_benchmark_report.py  run_heatmaps_analysis.py  run_linear.py  run_parallel.py
scripts/experiments/: test_kdtree_query_speed.py  test_water_intersection_points.py  visualize_scattering_phase_function.py
src/alb_sim/config/: describe_config.py  heatmap.py  laser.py  run.py  scene.py  sea_floor.py  sea_surface.py  sensor.py  simulation.py  water.py
utils/: ffscatter.py  gpt_ffscatter.py  numpy_vector.py  photon_state.py  plot_2d.py  plot_histogram.py  plot_scatter_2d.py  vector3.py  visualize_paths.py
utils/photon_mapping/: build_photon_map_data.py  fill_photon_storage_demo.py  photon_map_data.py  photon_map_index.py  photon_storage.py  print_photon_map_stats.py
(+44 files in other folders)
