[project]
name = "alb-sim"
version = "0.1.0"
authors = [
    { name = "Richard Fuchs" },
    { name = "Danny Schober" }
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "tabulate",
    "multiprocess"
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
plotting = [
    "matplotlib",
    "pandas"
]
notebooks = [
    "ipykernel",
    "jupyterlab",
    "matplotlib",
    "pandas"
]
dev = [
    "black",
    "ruff",
    "pre-commit",
    "mypy",
    "line_profiler",
    "types-tabulate",
    "scipy-stubs"
]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "I",
    "B",
    "SIM",
    "NPY",
    "N"
]
ignore = [
    "E201",
    "E701",
    "E501"
]